# edc-connector-client

./: .gitignore  .lintstagedrc.json  .npmignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  jest.config.ts  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
connector/: Dockerfile  build.gradle.kts
go/: Makefile  coverage.out  go.mod  go.work  go.work.sum
pretest/: edc-openapi.js
rust/: Cargo.toml
rust/src/: client.rs  context.rs  lib.rs
rust/src/controllers/: management_controller.rs  mod.rs  observability_controller.rs  public_controller.rs
rust/src/entities/: action.rs  addresses.rs  asset.rs  catalog.rs  constraint.rs  contract_agreement.rs  contract_definition.rs  contract_negotiation.rs  contract_offer.rs  criterion.rs  data_address.rs  dataplane.rs  duty.rs  health.rs  mod.rs  permission.rs  policy.rs  prohibition.rs  transfer_process.rs
scripts/: debug-catalog-request.ts  tsconfig.json
src/: client.d.ts  client.js  client.ts  constants.ts  context.d.ts  context.js  context.ts  edc-client.d.ts  edc-client.js  edc-client.ts  edc-controller.ts  error.d.ts  error.js  error.ts  index.js  index.ts  inner.d.ts  inner.js  inner.ts
tests/: crate-contract-negotiation.ts  e2e.test.ts  edc-client.test.ts  inner.test.ts  management-api-version.test.ts  management-api.yaml  middleware-prototype.test.ts  middleware-prototype2.test.ts  middleware-proxy.test.ts  middleware-utils.ts  prism-container.ts  test-utils.ts  use-method.test.ts  wait-for-negotiation-state.ts
(+267 files in other folders)
