[package]
name = "edc-connector-client"
version = "0.0.1-milestone-8.alpha-1"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
bytes = "1.4.0"
futures = "0.3.27"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "time"] }
uuid = { version = "1.3.0", features = ["v4"] }
